...
        }
    }

    struct ReviewDelete: RequestRouter {
        let baseUrl: URL
        let method: HTTPMethod = .post
        let path: String = "review/delete"
        let reviewId: Int
        let userId: Int
        let token: String
        var parameters: Parameters? {
            return [
                "id": reviewId,
...
